litehtml-sys/csrc/litehtml_c.h

/* --------------------------------------------------------------------------
 * Simple C structs (value types, passed across FFI by value or pointer)
 * -------------------------------------------------------------------------- */

typedef struct lh_position {
    float x;
    float y;
    float width;
    float height;
} lh_position_t;
typedef struct lh_size {
    float width;
    float height;
} lh_size_t;
typedef struct lh_web_color {
    unsigned char red;
    unsigned char green;
    unsigned char blue;
    unsigned char alpha;
    int is_current_color;
} lh_web_color_t;
typedef struct lh_font_metrics {
    float font_size;
    float height;
    float ascent;
    float descent;
    float x_height;
    float ch_width;
    int   draw_spaces;
    float sub_shift;
    float super_shift;
} lh_font_metrics_t;
typedef struct lh_border_radiuses {
    float top_left_x;
    float top_left_y;
    float top_right_x;
    float top_right_y;
    float bottom_right_x;
    float bottom_right_y;
    float bottom_left_x;
    float bottom_left_y;
} lh_border_radiuses_t;
typedef struct lh_border {
    float          width;
    int            style;
    lh_web_color_t color;
} lh_border_t;
typedef struct lh_borders {
    lh_border_t         left;
    lh_border_t         top;
    lh_border_t         right;
    lh_border_t         bottom;
    lh_border_radiuses_t radius;
} lh_borders_t;
typedef struct lh_media_features {
    int   type;
    float width;
    float height;
    float device_width;
    float device_height;
    int   color;
    int   color_index;
    int   monochrome;
    float resolution;
} lh_media_features_t;
/* --------------------------------------------------------------------------
 * Opaque types (pointers to C++ objects, never dereferenced from C)
 * -------------------------------------------------------------------------- */

typedef struct lh_document           lh_document_t;
typedef struct lh_background_layer   lh_background_layer_t;
typedef struct lh_linear_gradient    lh_linear_gradient_t;
typedef struct lh_radial_gradient    lh_radial_gradient_t;
typedef struct lh_conic_gradient     lh_conic_gradient_t;
typedef struct lh_font_description   lh_font_description_t;
typedef struct lh_list_marker        lh_list_marker_t;
/* --------------------------------------------------------------------------
 * Container callback vtable
 *
 * Each function pointer receives void* user_data as its first argument.
 * Opaque C++ objects are passed as opaque pointers; use the accessor
 * functions above to extract data from them.
 * -------------------------------------------------------------------------- */

typedef void (*lh_set_string_fn)(void* ctx, const char* text);
typedef void (*lh_set_language_fn)(void* ctx, const char* language, const char* culture);
typedef struct lh_container_vtable {
    uintptr_t   (*create_font)(void* user_data,
                               const lh_font_description_t* descr,
                               lh_font_metrics_t* fm);

    void        (*delete_font)(void* user_data,
                               uintptr_t hFont);

    float       (*text_width)(void* user_data,
                              const char* text,
                              uintptr_t hFont);

    void        (*draw_text)(void* user_data,
                             uintptr_t hdc,
                             const char* text,
                             uintptr_t hFont,
                             lh_web_color_t color,
                             lh_position_t pos);

    float       (*pt_to_px)(void* user_data,
                            float pt);

    float       (*get_default_font_size)(void* user_data);

    const char* (*get_default_font_name)(void* user_data);

    void        (*draw_list_marker)(void* user_data,
                                    uintptr_t hdc,
                                    const lh_list_marker_t* marker);

    void        (*load_image)(void* user_data,
                              const char* src,
                              const char* baseurl,
                              int redraw_on_ready);

    void        (*get_image_size)(void* user_data,
                                  const char* src,
                                  const char* baseurl,
                                  lh_size_t* sz);

    void        (*draw_image)(void* user_data,
                              uintptr_t hdc,
                              const lh_background_layer_t* layer,
                              const char* url,
                              const char* base_url);

    void        (*draw_solid_fill)(void* user_data,
                                   uintptr_t hdc,
                                   const lh_background_layer_t* layer,
                                   lh_web_color_t color);

    void        (*draw_linear_gradient)(void* user_data,
                                        uintptr_t hdc,
                                        const lh_background_layer_t* layer,
                                        const lh_linear_gradient_t* gradient);

    void        (*draw_radial_gradient)(void* user_data,
                                        uintptr_t hdc,
                                        const lh_background_layer_t* layer,
                                        const lh_radial_gradient_t* gradient);

    void        (*draw_conic_gradient)(void* user_data,
                                       uintptr_t hdc,
                                       const lh_background_layer_t* layer,
                                       const lh_conic_gradient_t* gradient);

    void        (*draw_borders)(void* user_data,
                                uintptr_t hdc,
                                lh_borders_t borders,
                                lh_position_t draw_pos,
                                int root);

    void        (*set_caption)(void* user_data,
                               const char* caption);

    void        (*set_base_url)(void* user_data,
                                const char* base_url);

    void        (*link)(void* user_data);

    void        (*on_anchor_click)(void* user_data,
                                   const char* url);

    void        (*on_mouse_event)(void* user_data,
                                  int event);

    void        (*set_cursor)(void* user_data,
                              const char* cursor);

    void        (*transform_text)(void* user_data,
                                  const char* text,
                                  int tt,
                                  lh_set_string_fn set_result,
                                  void* ctx);

    void        (*import_css)(void* user_data,
                              const char* url,
                              const char* baseurl,
                              lh_set_string_fn set_result,
                              void* result_ctx,
                              lh_set_string_fn set_baseurl,
                              void* baseurl_ctx);

    void        (*set_clip)(void* user_data,
                            lh_position_t pos,
                            lh_border_radiuses_t bdr_radius);

    void        (*del_clip)(void* user_data);

    void        (*get_viewport)(void* user_data,
                                lh_position_t* viewport);

    void        (*get_media_features)(void* user_data,
                                      lh_media_features_t* media);

    void        (*get_language)(void* user_data,
                                lh_set_language_fn set_result,
                                void* ctx);
} lh_container_vtable_t;
/* Element handle -- borrowed pointer, valid while the parent document is alive */
typedef struct lh_element lh_element_t;
/* --------------------------------------------------------------------------
 * Document lifecycle
 * -------------------------------------------------------------------------- */

lh_document_t* lh_document_create_from_string(
    const char* html,
    lh_container_vtable_t* vtable,
    void* user_data,
    const char* master_css,
    const char* user_styles);
void  lh_document_destroy(lh_document_t* doc);