litehtml-sys/src/bindings.rs

pub type lh_set_string_fn = ::std::option::Option<
    unsafe extern "C" fn(ctx: *mut ::std::os::raw::c_void, text: *const ::std::os::raw::c_char),
>;
pub type lh_set_language_fn = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::std::os::raw::c_void,
        language: *const ::std::os::raw::c_char,
        culture: *const ::std::os::raw::c_char,
    ),
>;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_container_vtable {
    pub create_font: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            descr: *const lh_font_description_t,
            fm: *mut lh_font_metrics_t,
        ) -> usize,
    >,
    pub delete_font: ::std::option::Option<
        unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, hFont: usize),
    >,
    pub text_width: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            text: *const ::std::os::raw::c_char,
            hFont: usize,
        ) -> f32,
    >,
    pub draw_text: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            hdc: usize,
            text: *const ::std::os::raw::c_char,
            hFont: usize,
            color: lh_web_color_t,
            pos: lh_position_t,
        ),
    >,
    pub pt_to_px: ::std::option::Option<
        unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, pt: f32) -> f32,
    >,
    pub get_default_font_size:
        ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> f32>,
    pub get_default_font_name: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
        ) -> *const ::std::os::raw::c_char,
    >,
    pub draw_list_marker: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            hdc: usize,
            marker: *const lh_list_marker_t,
        ),
    >,
    pub load_image: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            src: *const ::std::os::raw::c_char,
            baseurl: *const ::std::os::raw::c_char,
            redraw_on_ready: ::std::os::raw::c_int,
        ),
    >,
    pub get_image_size: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            src: *const ::std::os::raw::c_char,
            baseurl: *const ::std::os::raw::c_char,
            sz: *mut lh_size_t,
        ),
    >,
    pub draw_image: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            hdc: usize,
            layer: *const lh_background_layer_t,
            url: *const ::std::os::raw::c_char,
            base_url: *const ::std::os::raw::c_char,
        ),
    >,
    pub draw_solid_fill: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            hdc: usize,
            layer: *const lh_background_layer_t,
            color: lh_web_color_t,
        ),
    >,
    pub draw_linear_gradient: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            hdc: usize,
            layer: *const lh_background_layer_t,
            gradient: *const lh_linear_gradient_t,
        ),
    >,
    pub draw_radial_gradient: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            hdc: usize,
            layer: *const lh_background_layer_t,
            gradient: *const lh_radial_gradient_t,
        ),
    >,
    pub draw_conic_gradient: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            hdc: usize,
            layer: *const lh_background_layer_t,
            gradient: *const lh_conic_gradient_t,
        ),
    >,
    pub draw_borders: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            hdc: usize,
            borders: lh_borders_t,
            draw_pos: lh_position_t,
            root: ::std::os::raw::c_int,
        ),
    >,
    pub set_caption: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            caption: *const ::std::os::raw::c_char,
        ),
    >,
    pub set_base_url: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            base_url: *const ::std::os::raw::c_char,
        ),
    >,
    pub link: ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void)>,
    pub on_anchor_click: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            url: *const ::std::os::raw::c_char,
        ),
    >,
    pub on_mouse_event: ::std::option::Option<
        unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, event: ::std::os::raw::c_int),
    >,
    pub set_cursor: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            cursor: *const ::std::os::raw::c_char,
        ),
    >,
    pub transform_text: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            text: *const ::std::os::raw::c_char,
            tt: ::std::os::raw::c_int,
            set_result: lh_set_string_fn,
            ctx: *mut ::std::os::raw::c_void,
        ),
    >,
    pub import_css: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            url: *const ::std::os::raw::c_char,
            baseurl: *const ::std::os::raw::c_char,
            set_result: lh_set_string_fn,
            result_ctx: *mut ::std::os::raw::c_void,
            set_baseurl: lh_set_string_fn,
            baseurl_ctx: *mut ::std::os::raw::c_void,
        ),
    >,
    pub set_clip: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            pos: lh_position_t,
            bdr_radius: lh_border_radiuses_t,
        ),
    >,
    pub del_clip:
        ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void)>,
    pub get_viewport: ::std::option::Option<
        unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, viewport: *mut lh_position_t),
    >,
    pub get_media_features: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            media: *mut lh_media_features_t,
        ),
    >,
    pub get_language: ::std::option::Option<
        unsafe extern "C" fn(
            user_data: *mut ::std::os::raw::c_void,
            set_result: lh_set_language_fn,
            ctx: *mut ::std::os::raw::c_void,
        ),
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_container_vtable"][::std::mem::size_of::<lh_container_vtable>() - 232usize];
    ["Alignment of lh_container_vtable"][::std::mem::align_of::<lh_container_vtable>() - 8usize];
    ["Offset of field: lh_container_vtable::create_font"]
        [::std::mem::offset_of!(lh_container_vtable, create_font) - 0usize];
    ["Offset of field: lh_container_vtable::delete_font"]
        [::std::mem::offset_of!(lh_container_vtable, delete_font) - 8usize];
    ["Offset of field: lh_container_vtable::text_width"]
        [::std::mem::offset_of!(lh_container_vtable, text_width) - 16usize];
    ["Offset of field: lh_container_vtable::draw_text"]
        [::std::mem::offset_of!(lh_container_vtable, draw_text) - 24usize];
    ["Offset of field: lh_container_vtable::pt_to_px"]
        [::std::mem::offset_of!(lh_container_vtable, pt_to_px) - 32usize];
    ["Offset of field: lh_container_vtable::get_default_font_size"]
        [::std::mem::offset_of!(lh_container_vtable, get_default_font_size) - 40usize];
    ["Offset of field: lh_container_vtable::get_default_font_name"]
        [::std::mem::offset_of!(lh_container_vtable, get_default_font_name) - 48usize];
    ["Offset of field: lh_container_vtable::draw_list_marker"]
        [::std::mem::offset_of!(lh_container_vtable, draw_list_marker) - 56usize];
    ["Offset of field: lh_container_vtable::load_image"]
        [::std::mem::offset_of!(lh_container_vtable, load_image) - 64usize];
    ["Offset of field: lh_container_vtable::get_image_size"]
        [::std::mem::offset_of!(lh_container_vtable, get_image_size) - 72usize];
    ["Offset of field: lh_container_vtable::draw_image"]
        [::std::mem::offset_of!(lh_container_vtable, draw_image) - 80usize];
    ["Offset of field: lh_container_vtable::draw_solid_fill"]
        [::std::mem::offset_of!(lh_container_vtable, draw_solid_fill) - 88usize];
    ["Offset of field: lh_container_vtable::draw_linear_gradient"]
        [::std::mem::offset_of!(lh_container_vtable, draw_linear_gradient) - 96usize];
    ["Offset of field: lh_container_vtable::draw_radial_gradient"]
        [::std::mem::offset_of!(lh_container_vtable, draw_radial_gradient) - 104usize];
    ["Offset of field: lh_container_vtable::draw_conic_gradient"]
        [::std::mem::offset_of!(lh_container_vtable, draw_conic_gradient) - 112usize];
    ["Offset of field: lh_container_vtable::draw_borders"]
        [::std::mem::offset_of!(lh_container_vtable, draw_borders) - 120usize];
    ["Offset of field: lh_container_vtable::set_caption"]
        [::std::mem::offset_of!(lh_container_vtable, set_caption) - 128usize];
    ["Offset of field: lh_container_vtable::set_base_url"]
        [::std::mem::offset_of!(lh_container_vtable, set_base_url) - 136usize];
    ["Offset of field: lh_container_vtable::link"]
        [::std::mem::offset_of!(lh_container_vtable, link) - 144usize];
    ["Offset of field: lh_container_vtable::on_anchor_click"]
        [::std::mem::offset_of!(lh_container_vtable, on_anchor_click) - 152usize];
    ["Offset of field: lh_container_vtable::on_mouse_event"]
        [::std::mem::offset_of!(lh_container_vtable, on_mouse_event) - 160usize];
    ["Offset of field: lh_container_vtable::set_cursor"]
        [::std::mem::offset_of!(lh_container_vtable, set_cursor) - 168usize];
    ["Offset of field: lh_container_vtable::transform_text"]
        [::std::mem::offset_of!(lh_container_vtable, transform_text) - 176usize];
    ["Offset of field: lh_container_vtable::import_css"]
        [::std::mem::offset_of!(lh_container_vtable, import_css) - 184usize];
    ["Offset of field: lh_container_vtable::set_clip"]
        [::std::mem::offset_of!(lh_container_vtable, set_clip) - 192usize];
    ["Offset of field: lh_container_vtable::del_clip"]
        [::std::mem::offset_of!(lh_container_vtable, del_clip) - 200usize];
    ["Offset of field: lh_container_vtable::get_viewport"]
        [::std::mem::offset_of!(lh_container_vtable, get_viewport) - 208usize];
    ["Offset of field: lh_container_vtable::get_media_features"]
        [::std::mem::offset_of!(lh_container_vtable, get_media_features) - 216usize];
    ["Offset of field: lh_container_vtable::get_language"]
        [::std::mem::offset_of!(lh_container_vtable, get_language) - 224usize];
};
pub type lh_container_vtable_t = lh_container_vtable;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lh_element {
    _unused: [u8; 0],
}
pub type lh_element_t = lh_element;
unsafe extern "C" {
    pub fn lh_document_create_from_string(
        html: *const ::std::os::raw::c_char,
        vtable: *mut lh_container_vtable_t,
        user_data: *mut ::std::os::raw::c_void,
        master_css: *const ::std::os::raw::c_char,
        user_styles: *const ::std::os::raw::c_char,
    ) -> *mut lh_document_t;
}
unsafe extern "C" {
    pub fn lh_document_destroy(doc: *mut lh_document_t);
}
